    coalesce atomic counter increments.
  - A new method, `stats()', provides detailed statistics on the client's
    activities (number of calls for various RPCs, number of connections
    created, etc.)
  - `HBaseClient' has a new `compareAndSet(PutRequests, byte[])' method
    for atomic Compare-And-Set (CAS) operation.
  - The Scanner has new methods to allow specifying a time range to scan.

Deprecated public APIs:
  - In HBaseClient, the methods `rootLookupCount()',
    `uncontendedMetaLookupCount()', and `contendedMetaLookupCount()' are
    deprecated in favor of the new `stats()' API.  These methods will be
    removed in the 2.0 release.

Noteworthy changes:
  - Upgraded to Netty 3.4.3, suasync to 1.2.0.
  - asynchbase now depends on Google's Guava library (v12.0).


* Version 1.2.0 (2012-02-21) [a7ae238]

Noteworthy changes:
  - Add support for HBase 0.92, as the on-wire RPC format underwent
    significant changes that aren't compatible with previous versions.
    NOTE: HBase never had a release in the 0.91 branch, and as such
    this branch isn't fully supported.
  - When talking to HBase 0.92, we automatically batch `DeleteRequests'
    with `PutRequests'.  Note that batching is enabled by default, and
    will thus introduce a delay before sending out `DeleteRequests' to
    HBase, whereas in earlier versions (or when talking to HBase 0.90
    and before) the `DeleteRequests' are sent out immediately.

New public APIs:
  - KeyValue now supports timestamps.
  - HBaseClient now accepts a custom socket factory or executor, which can
    be used to share an existing thread pool instead of having its own.
  - The Netty Timer used by asynchbase is now available through an API, so
    that code dependent on asynchbase can re-use the existing Timer thread
    instead of having to create its own.


* Version 1.1.0 (2011-12-22) [1272a9e]

Noteworthy changes:
  - Add support for CDH3b3's non-standard authentication code.  This support